--- a/assignment1.html
+++ b/assignment1.html
@@ -8,6 +8,11 @@
 
   </head>
 <body>
+  <style>
+    table thead tr th.body {
+      width: 100%;
+    }
+  </style>
     
     <table class="table table-striped table-bordered table-hover table-sm table-responsive table-light">
         <thead class="thead-dark">
@@ -15,7 +20,7 @@
             <th scope="col">#</th>
             <th scope="col">UserID</th>
             <th scope="col">Title</th>
-            <th scope="col">Body</th>
+            <th class="body" scope="col">Body</th>
           </tr>
         </thead>
         <tbody id="tableBody">
